Fix font size for typed text on mobile

--- a/css/mobileStyles.css
+++ b/css/mobileStyles.css
@@ -22,7 +22,8 @@
     h1 {
         font-size: 3rem;
     }
-    h2 {
+    h2,
+    .typedRandom {
         font-size: 1.7rem;
     }
     .aboutSection {
